Bug 190342 - Network Manager Plasmoid doesn't brighten up when hovering
Summary: Network Manager Plasmoid doesn't brighten up when hovering
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
: 275055 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-22 15:03 UTC by Sander Pientka
Modified: 2011-09-18 18:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sander Pientka 2009-04-22 15:03:11 UTC
Version:            (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

The Network Management Plasmoid doesn't brighten up when hovering over it, like all other plasmoids do.
Comment 1 Lamarque V. Souza 2011-07-22 00:04:21 UTC
*** Bug 275055 has been marked as a duplicate of this bug. ***
Comment 2 Lamarque V. Souza 2011-09-18 18:16:25 UTC
Git commit f492281ddaa9c4d91eaa577fcf4bd39015048fe9 by Lamarque V. Souza.
Committed on 18/09/2011 at 20:15.
Pushed by lvsouza into branch 'nm09'.

Enable hover effects on system tray icon.

BUG: 190342
FIXED-IN: nm09

M  +6    -5    applet/networkmanager.cpp

http://commits.kde.org/networkmanagement/f492281ddaa9c4d91eaa577fcf4bd39015048fe9