Enable hover effects on system tray icon.

BUG: 190342
FIXED-IN: nm09